:rocket: added some small helpers

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         <button class="fetch-matches" id="hideMatches" role="button">Hide Match History</button>
     </div>
     <div class="matches-container" id="match-cont"></div>
-    <script src="app.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 
 </html>
