:rocket: restyling the summoner card so it has all ranks

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,17 @@
 
         </div>
     </form>
-    <div id="result"></div>
+    <div id="result">
+        <div class="summoner-card">
+            <div class="summoner">
+                <h2 class="summoner-name">JUJULINOS PRIME</h2>
+                <img src="http://ddragon.leagueoflegends.com/cdn/13.7.1/img/profileicon/53.png" alt="JUJULINOS PRIME" class="profile-icon">
+                
+                <div class="summoner-level"><span>690</span></div>
+            </div>
+
+    </div>
+    </div>
     <div class="btn-container">
         <button class="fetch-matches" id="match" role="button">View Match History</button>
         <button class="fetch-matches" id="hideMatches" role="button">Hide Match History</button>
